Manually Run Pipeline

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -14,11 +14,11 @@ stages:
       - ${data_folder}
   
   data-metrics:
-    cmd: python src/data_metrics.py
+    cmd: python src/compute_metrics.py
       --input_folder ${data_folder}
       --output_metrics_file ${metrics_file}
     deps:
-      - src/data_metrics.py
+      - src/compute_metrics.py
       - ${data_folder}
     metrics:
       - ${metrics_file}:
