--- a/.github/workflows/on_push_or_pr.yml
+++ b/.github/workflows/on_push_or_pr.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Run pipeline
         env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           dvc exp run
 
