--- a/.github/workflows/issue-labeler.yml
+++ b/.github/workflows/issue-labeler.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        model: [ghcr.io/daavoo/model-pyday-bcn-2021:solution]
+        model: ["ghcr.io/daavoo/model-pyday-bcn-2021:solution"]
     steps:
       - name: Model Predict
         run: docker run ${{ matrix.model }} ${{ github.event.issue.title }} ${{ github.event.issue.body }}
